--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
 
 <!-- Calendar Section -->
 <div class="section">
-    <h2>Event Calendar</h2>
+    <h2 class="section-title">Event Calendar</h2>
     <div class="calendar">
         <div class="calendar-header">
             <button id="prevMonth" class="nav-button">&#10094;</button>
-            <h3 id="monthDisplay"></h3>
+            <h3 id="monthDisplay" class="month-display"></h3>
             <button id="nextMonth" class="nav-button">&#10095;</button>
         </div>
         <div class="days-of-week">
