--- a/index.html
+++ b/index.html
@@ -200,15 +200,14 @@
         </div>
 
 <!-- Calendar Section -->
-<div class="section">
-    <h2 class="section-title">Event Calendar</h2>
+<div class="calendar-wrapper">
     <div class="calendar">
         <div class="calendar-header">
-            <button id="prevMonth" class="nav-button">&#10094;</button>
-            <h3 id="monthDisplay" class="month-display"></h3>
-            <button id="nextMonth" class="nav-button">&#10095;</button>
+            <button id="prevMonth" class="calendar-nav-btn">&#10094;</button>
+            <h3 id="monthDisplay" class="calendar-title"></h3>
+            <button id="nextMonth" class="calendar-nav-btn">&#10095;</button>
         </div>
-        <div class="days-of-week">
+        <div class="calendar-weekdays">
             <div>Sun</div>
             <div>Mon</div>
             <div>Tue</div>
@@ -217,15 +216,13 @@
             <div>Fri</div>
             <div>Sat</div>
         </div>
-        <div class="days" id="daysContainer">
-            <!-- JavaScript will populate this -->
-        </div>
+        <div class="calendar-days" id="daysContainer"></div>
     </div>
 </div>
 
-<div id="event-popup" class="popup">
-    <div class="popup-content">
-        <span class="close-button">&times;</span>
+<div id="calendar-popup" class="calendar-popup">
+    <div class="calendar-popup-content">
+        <span class="calendar-close-btn">&times;</span>
         <div id="event-details"></div>
     </div>
 </div>
