--- a/index.html
+++ b/index.html
@@ -200,31 +200,10 @@
         </div>
 
 <!-- Calendar Section -->
-<div class="section">
-    <div id="calendarSection" class="calendar-container">
-        <div class="calendar-nav">
-            <button class="cal-btn" id="prevMonth">&lt;</button>
-            <div id="monthDisplay" class="month-title"></div>
-            <button class="cal-btn" id="nextMonth">&gt;</button>
-        </div>
-        <div class="weekdays">
-            <div class="weekday-text">Sun</div>
-            <div class="weekday-text">Mon</div>
-            <div class="weekday-text">Tue</div>
-            <div class="weekday-text">Wed</div>
-            <div class="weekday-text">Thu</div>
-            <div class="weekday-text">Fri</div>
-            <div class="weekday-text">Sat</div>
-        </div>
-        <div id="calendar" class="days-grid"></div>
-    </div>
-
-    <!-- Event Popup -->
-    <div id="eventPopup" class="event-popup">
-        <div class="event-popup-content">
-            <span class="close-popup">&times;</span>
-            <div id="eventDetails" class="event-details"></div>
-        </div>
+<div class="events-section">
+    <h2 class="section-title">Upcoming Events</h2>
+    <div class="events-container" id="eventsContainer">
+        <!-- Events will be populated here by JavaScript -->
     </div>
 </div>
         
