--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
         </div>
 
 <!-- Calendar Section -->
-<div class="events-section">
-    <h2 class="section-title">Upcoming Events</h2>
-    <div class="events-container" id="eventsContainer">
-        <!-- Events will be populated here by JavaScript -->
+<section class="section" data-section-id="events">
+    <div class="section-content">
+        <h2 class="section-title">Upcoming Events</h2>
+        <div class="events-container" id="eventsContainer"></div>
     </div>
-</div>
+</section>
         
 <!-- FAQ Section -->
 <div class="faq-section">
