--- a/index.html
+++ b/index.html
@@ -336,5 +336,6 @@
     <script src="script.js"></script>
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
+    <script src="events.js"></script>
 </body>
 </html>                
