--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <span class="faq-icon">+</span>
             </button>
             <div class="faq-answer">
-                Bus Army Dude is a platform where I share my social media presence and connect with my community.
+                Bus Army Dude is a platform where I share my social media presence and connect with my community. I create content about my daily life, share my experiences with AFOs (Ankle-Foot Orthoses), gaming content, tech reviews, and build a supportive community.
             </div>
         </div>
 
@@ -227,7 +227,97 @@
                 <span class="faq-icon">+</span>
             </button>
             <div class="faq-answer">
-                You can reach me through any of the social media platforms linked above.
+                You can reach me through any of my social media platforms linked above. I'm most active on TikTok and Instagram.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">
+                What are AFOs and why do you wear them?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                AFOs (Ankle-Foot Orthoses) are medical devices that support my ankles and feet. I wear them to help with mobility and stability. I often share information about them to raise awareness and help others who might need them.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">
+                What games do you play?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                I play a variety of simulation and strategy games on Steam including Farming Simulator 2025, X-Plane 12, American Truck Simulator, Car Mechanic Simulator 2018, Ark: Survival of the Fittest, Cities: Skylines, Planet Coaster, and X-Plane 11.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">
+                Do you have a merch store?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                Yes! I have a merchandise store where you can find exclusive Bus Army Dude gear. Check out the links above to visit my store.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">
+                What tech do you use?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                I'm an Apple tech enthusiast. I currently use an iPhone 16 Pro, 2023 Mac Mini, and Apple Watch Ultra 2 for my content creation and daily use.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">
+                When do you typically stream on TikTok?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                I try to stream regularly on TikTok. You can find my upcoming stream schedule in the Events section above. Make sure to follow me on TikTok to get notifications when I go live!
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">
+                What type of content do you create?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                I create diverse content including livestreams, daily vlogs, AFO awareness videos, gaming content, tech reviews, and lifestyle content. I share my experiences with AFOs, gameplay from my favorite simulation games, and insights about the latest Apple technology.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">
+                Where can I find your latest updates?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                My latest updates can be found on my TikTok and Instagram accounts. I also post upcoming events and streams in the Events section of this website. For merch updates, check out my store page.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">
+                How can I support your content?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                The best ways to support me are by following my social media accounts, engaging with my content (likes, comments, shares), joining my livestreams, and checking out my merch store. Your support means a lot to me!
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">
+                Do you stream your gameplay?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                Yes, I occasionally stream games like Farming Simulator 2025 and X-Plane 12. Check my stream schedule in the Events section to catch my gaming streams!
             </div>
         </div>
     </div>
