--- a/index.html
+++ b/index.html
@@ -846,8 +846,279 @@
                 <p>Thank you for being part of this journey!</p>
             </div>
         </div>
-    </div>
-</div>
+
+        <!-- Website Information -->
+        <div class="faq-item">
+            <button class="faq-question">
+                Tell me about this website's technical details
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                <p>Website Technical Specifications:</p>
+                <ul>
+                    <li>Repository Information:
+                        <ul>
+                            <li>Repository ID: 912084953</li>
+                            <li>Full Name: Bus-Army-Dude/bus-army-dude</li>
+                            <li>Description: A link in bio for social media accounts</li>
+                        </ul>
+                    </li>
+                    <li>Technology Stack:
+                        <ul>
+                            <li>JavaScript (50.2% of codebase)</li>
+                            <li>CSS (29.3% of codebase)</li>
+                            <li>HTML (20.5% of codebase)</li>
+                        </ul>
+                    </li>
+                    <li>Hosting: GitHub Pages</li>
+                    <li>Domain: bus-army-dude.github.io</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Website Features -->
+        <div class="faq-item">
+            <button class="faq-question">
+                What features does this website include?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                <p>Core Features:</p>
+                <ul>
+                    <li>Navigation:
+                        <ul>
+                            <li>Responsive menu system</li>
+                            <li>Dynamic content loading</li>
+                            <li>Mobile-friendly design</li>
+                        </ul>
+                    </li>
+                    <li>Content Sections:
+                        <ul>
+                            <li>FAQ system with expandable answers</li>
+                            <li>Social media links directory</li>
+                            <li>Schedule/Events calendar</li>
+                            <li>Content updates section</li>
+                            <li>Platform status indicators</li>
+                        </ul>
+                    </li>
+                    <li>Interactive Elements:
+                        <ul>
+                            <li>Click-to-expand FAQ items</li>
+                            <li>Direct social media links</li>
+                            <li>Dynamic date/time display</li>
+                            <li>Platform availability status</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Website Security -->
+        <div class="faq-item">
+            <button class="faq-question">
+                What security features does this website have?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                <p>Security Implementation:</p>
+                <ul>
+                    <li>Connection Security:
+                        <ul>
+                            <li>HTTPS encryption (GitHub Pages default)</li>
+                            <li>Secure content delivery</li>
+                            <li>TLS 1.3 protocol support</li>
+                        </ul>
+                    </li>
+                    <li>Content Security:
+                        <ul>
+                            <li>Content Security Policy (CSP) headers</li>
+                            <li>Cross-Origin Resource Sharing (CORS) protection</li>
+                            <li>XSS protection measures</li>
+                        </ul>
+                    </li>
+                    <li>Repository Security:
+                        <ul>
+                            <li>Version control through Git</li>
+                            <li>Deployment protection rules</li>
+                            <li>Branch protection settings</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Website Updates -->
+        <div class="faq-item">
+            <button class="faq-question">
+                How often is the website updated?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                <p>Update Schedule:</p>
+                <ul>
+                    <li>Regular Updates:
+                        <ul>
+                            <li>Content updates (daily)</li>
+                            <li>Schedule updates (weekly)</li>
+                            <li>Feature updates (as needed)</li>
+                            <li>Security patches (immediate when available)</li>
+                        </ul>
+                    </li>
+                    <li>Version Control:
+                        <ul>
+                            <li>All changes tracked via Git</li>
+                            <li>Public commit history available</li>
+                            <li>Automated deployment process</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>Last Updated: January 28th, 2025 20:03:06 UTC</p>
+            </div>
+        </div>
+
+        <!-- Website Accessibility -->
+        <div class="faq-item">
+            <button class="faq-question">
+                What accessibility features are implemented?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                <p>Accessibility Features:</p>
+                <ul>
+                    <li>General Accessibility:
+                        <ul>
+                            <li>WCAG 2.1 compliance</li>
+                            <li>Keyboard navigation support</li>
+                            <li>Screen reader compatibility</li>
+                            <li>High contrast options</li>
+                        </ul>
+                    </li>
+                    <li>Content Accessibility:
+                        <ul>
+                            <li>Alt text for all images</li>
+                            <li>ARIA labels implementation</li>
+                            <li>Semantic HTML structure</li>
+                            <li>Responsive text sizing</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Website Performance -->
+        <div class="faq-item">
+            <button class="faq-question">
+                How is website performance optimized?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                <p>Performance Optimizations:</p>
+                <ul>
+                    <li>Loading Speed:
+                        <ul>
+                            <li>Minified JavaScript and CSS</li>
+                            <li>Optimized image delivery</li>
+                            <li>Content caching implementation</li>
+                            <li>Lazy loading for images</li>
+                        </ul>
+                    </li>
+                    <li>Resource Management:
+                        <ul>
+                            <li>Efficient code splitting</li>
+                            <li>Compressed assets</li>
+                            <li>CDN integration</li>
+                            <li>Browser caching enabled</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Website Mobile Support -->
+        <div class="faq-item">
+            <button class="faq-question">
+                How does the website work on mobile devices?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                <p>Mobile Support Features:</p>
+                <ul>
+                    <li>Responsive Design:
+                        <ul>
+                            <li>Adaptive layouts</li>
+                            <li>Touch-friendly interface</li>
+                            <li>Mobile-optimized images</li>
+                            <li>Flexible typography</li>
+                        </ul>
+                    </li>
+                    <li>Mobile Performance:
+                        <ul>
+                            <li>Fast loading times</li>
+                            <li>Reduced data usage</li>
+                            <li>Offline capability</li>
+                            <li>Progressive Web App features</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Website Content Protection -->
+        <div class="faq-item">
+            <button class="faq-question">
+                How is the website's content protected?
+                <span class="faq-icon">+</span>
+            </button>
+            <div class="faq-answer">
+                <p>Content Protection Features:</p>
+                <ul>
+                    <li>Text Protection:
+                        <ul>
+                            <li>Copy-paste disabled for all text content</li>
+                            <li>Text selection disabled</li>
+                            <li>Right-click context menu disabled</li>
+                            <li>Keyboard shortcuts for copying blocked (Ctrl+C, ⌘+C)</li>
+                            <li>Drag-and-drop text selection prevented</li>
+                        </ul>
+                    </li>
+                    <li>Image Protection:
+                        <ul>
+                            <li>Right-click saving disabled</li>
+                            <li>Image dragging prevented</li>
+                            <li>Screenshot prevention measures</li>
+                            <li>Mobile long-press save disabled</li>
+                            <li>Image download blocking</li>
+                        </ul>
+                    </li>
+                    <li>Print Prevention:
+                        <ul>
+                            <li>Print commands blocked (Ctrl+P, ⌘+P)</li>
+                            <li>Print Screen key disabled</li>
+                            <li>Browser print function blocked</li>
+                            <li>PDF conversion prevented</li>
+                        </ul>
+                    </li>
+                    <li>Cross-Platform Protection:
+                        <ul>
+                            <li>Mobile browser save restrictions</li>
+                            <li>Tablet content protection</li>
+                            <li>Desktop browser security</li>
+                            <li>All major browsers supported</li>
+                        </ul>
+                    </li>
+                    <li>Additional Security:
+                        <ul>
+                            <li>View-source restrictions</li>
+                            <li>Developer tools detection</li>
+                            <li>Iframe embedding prevention</li>
+                            <li>Content scraping protection</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>Note: These protections are implemented to maintain content integrity and prevent unauthorized copying.</p>
+            </div>
+        </div>
+        
         <!-- Tech Section -->
         <div class="tech-section section">
             <h2>Tech Information</h2>
