--- a/index.html
+++ b/index.html
@@ -401,16 +401,14 @@
                     <li>Repository Information:
                         <ul>
                             <li>Owner: BusArmyDude</li>
-                            <li>Repository ID: 912084953</li>
-                            <li>Full Name: Bus-Army-Dude/bus-army-dude</li>
                             <li>Description: A link in bio for social media accounts</li>
                         </ul>
                     </li>
                     <li>Technology Stack:
                         <ul>
-                            <li>JavaScript (50.2% of codebase)</li>
-                            <li>CSS (29.3% of codebase)</li>
-                            <li>HTML (20.5% of codebase)</li>
+                            <li>JavaScript (38.3%)</li>
+                            <li>CSS (24.3%)</li>
+                            <li>HTML (37.4%)</li>
                         </ul>
                     </li>
                     <li>Last Updated: January 28th, 2025 20:10:38 UTC</li>
