--- a/index.html
+++ b/index.html
@@ -289,10 +289,8 @@
             <div class="faq-answer">
                 <p>I stream regularly on TikTok. My next stream is scheduled for:</p>
                 <ul>
-                    <li>Date: January 31st, 2025 (This Friday)</li>
-                    <li>Time: 10:30 PM EST to 12:30 AM EST</li>
+                    <li>No upcoming events scheduled</li>
                 </ul>
-                <p>This will be a special stream as it coincides with my first day with AFOs!</p>
                 <p>Check the Events section for all upcoming stream schedules.</p>
             </div>
         </div>
