--- a/settings.html
+++ b/settings.html
@@ -21,7 +21,17 @@
     <meta name="theme-color" content="#ffffff"/>
 </head>
 
-<body class="settings-page dark-mode">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E0RSQS1MS7');
+</script>
+
+<body class="settings-page">
     <div class="container">
         <div class="settings-section section">
             <div class="settings-header">
