--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="social-links-section">
             <h2>Connect with Me</h2>
             <div class="social-links-container">
-                <a href="https://tiktok.com/@busarmydude" class="social-button">
+                <a href="https://www.tiktok.com/@officalbusarmydude" class="social-button">
                     <img src="tiktok.png" alt="TikTok" class="social-icon">
                     <span>TikTok</span>
                 </a>
