--- a/index.html
+++ b/index.html
@@ -627,9 +627,9 @@
     <!-- Watermark text -->
     <div class="watermark">Protected by Watermark</div>
 
-    <!-- Footer -->
+       <!-- Footer -->
     <footer>
-        <p>© 2025 Bus Army Dude. All Rights Reserved.</p>
+        <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
     </footer>
 
     <!-- Scripts -->
