--- a/settings.html
+++ b/settings.html
@@ -77,12 +77,10 @@
     </div>
 
     <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <p class="copyright">© 2025 Bus Army Dude. All Rights Reserved.</p>
-        </div>
-    </footer>
-
+<footer>
+    <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
+</footer>
+    
     <!-- Scripts -->
     <script src="settings.js"></script>
 </body>
