--- a/index.html
+++ b/index.html
@@ -638,5 +638,6 @@
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
     <script src="events.js"></script>
+    <script src="os-version-check.js"></script>
 </body>
 </html>                
