--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
         </div>
     </div>
     
-    <!-- Version Panel Section -->
+   <!-- Version Panel Section -->
     <div class="version-info-container">
         <div class="version-info-section">
             <div class="version-header">Version Information</div>
@@ -611,6 +611,9 @@
             <div class="countdown">5 minutes</div>
         </div>
     </div>
+
+    <!-- Link to external JavaScript file -->
+    <script src="os-version-check.js"></script>
     
    <!-- The back to top button should be placed just before the notice-container div -->
     <button id="backToTop" class="back-to-top" aria-label="Back to top">↑</button>
@@ -638,6 +641,5 @@
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
     <script src="events.js"></script>
-    <script src="os-version-check.js"></script>
 </body>
 </html>                
