--- a/index.html
+++ b/index.html
@@ -600,20 +600,16 @@
         </div>
     </div>
     
-   <!-- Version Panel Section -->
+  <!-- Version Panel Section -->
 <div class="version-info-container">
     <div class="version-info-section">
         <div class="version-header">Version Information</div>
         <div class="version-number">v1.11.0</div>
         <div class="build-number">2025.1.27</div>
-        <div class="user-info">
-            <span class="user-login">BusArmyDude</span>
-        </div>
+        <div class="user-login">BusArmyDude</div>
         <div class="device-info">Loading...</div>
-        <div class="time-info">
-            <div class="utc-time">UTC: 2025-01-30 17:41:31</div>
-            <div class="local-time update-time">Local: 2025-01-27 21:29:16</div>
-        </div>
+        <div class="utc-time">2025-01-30 17:44:06</div>
+        <div class="update-time">2025-01-27 21:29:16</div>
         <div class="countdown">5 minutes</div>
     </div>
 </div>
