--- a/index.html
+++ b/index.html
@@ -599,13 +599,14 @@
             </ul>
         </div>
     </div>
-    
+
+<!-- Version Information Panel -->    
 <div class="version-info-container">
     <div class="version-info-section">
         <div class="version-header">Version Information</div>
-        <div class="version-number">v1.11.0</div>
-        <div class="build-number">2025.1.27</div>
-        <div class="user-login">BusArmyDude</div>
+        <div class="version-number"></div>
+        <div class="build-number"></div>
+        <div class="user-login"></div>
         <div class="device-info">Loading...</div>
         <div class="utc-time"></div>
         <div class="update-time"></div>
