--- a/index.html
+++ b/index.html
@@ -600,17 +600,16 @@
         </div>
     </div>
 
-<!-- Version Information Panel -->    
 <div class="version-info-container">
     <div class="version-info-section">
         <div class="version-header">Version Information</div>
-        <div class="version-number"></div>
-        <div class="build-number"></div>
-        <div class="user-login"></div>
+        <div class="version-number">v1.11.0</div>
+        <div class="build-number">2025.1.27</div>
+        <div class="user-login">BusArmyDude</div>
         <div class="device-info">Loading...</div>
-        <div class="utc-time"></div>
-        <div class="update-time"></div>
-        <div class="countdown"></div>
+        <div class="utc-time">2025-01-30 18:25:53</div>
+        <div class="update-time">Loading...</div>
+        <div class="countdown">Loading...</div>
     </div>
 </div>
     
