--- a/index.html
+++ b/index.html
@@ -605,13 +605,13 @@
 <div class="version-info-container">
     <div class="version-info-section">
         <div class="version-header">Version Information</div>
-        <div class="version-number"></div>
-        <div class="build-number"></div>
-        <div class="user-login"></div>
-        <div class="device-info">Loading...</div>
-        <div class="utc-time">Loading...</div>
-        <div class="update-time">Loading...</div>
-        <div class="version-countdown">Loading...</div>
+        <div class="version-number">Version Number:</div>
+        <div class="build-number">Build Number:</div>
+        <div class="user-login">User Login:</div>
+        <div class="device-info">Device: Loading...</div>
+        <div class="utc-time">UTC Time: Loading...</div>
+        <div class="update-time">Current Date & Time: Loading...</div>
+        <div class="version-countdown">Page Refreshing in: Loading...</div>
     </div>
 </div>
     
