--- a/index.html
+++ b/index.html
@@ -605,13 +605,41 @@
 <div class="version-info-container">
     <div class="version-info-section">
         <div class="version-header">Version Information</div>
-        <div class="version-number">Version Number:</div>
-        <div class="build-number">Build Number:</div>
-        <div class="user-login">User Login:</div>
-        <div class="device-info">Device: Loading...</div>
-        <div class="utc-time">UTC Time: Loading...</div>
-        <div class="update-time">Current Date & Time: Loading...</div>
-        <div class="version-countdown">Page Refreshing in: Loading...</div>
+        
+        <div class="info-row">
+            <div class="info-label">Version:</div>
+            <div class="version-number"></div>
+        </div>
+
+        <div class="info-row">
+            <div class="info-label">Build:</div>
+            <div class="build-number"></div>
+        </div>
+
+        <div class="info-row">
+            <div class="info-label">User:</div>
+            <div class="user-login"></div>
+        </div>
+
+        <div class="info-row">
+            <div class="info-label">Device:</div>
+            <div class="device-info">Loading...</div>
+        </div>
+
+        <div class="info-row">
+            <div class="info-label">UTC Time:</div>
+            <div class="utc-time">Loading...</div>
+        </div>
+
+        <div class="info-row">
+            <div class="info-label">Local Time:</div>
+            <div class="update-time">Loading...</div>
+        </div>
+
+        <div class="info-row">
+            <div class="info-label">Status:</div>
+            <div class="version-countdown">Loading...</div>
+        </div>
     </div>
 </div>
     
