--- a/index.html
+++ b/index.html
@@ -639,5 +639,6 @@
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
     <script src="events.js"></script>
+    <script src="version.js"></script>
 </body>
 </html>                
