--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
                     <img src="tiktok.png" alt="TikTok" class="social-icon">
                     <span>TikTok</span>
                 </a>
+                <a href="https://www.youtube.com/@BusArmyDude" class="social-button">
+                    <img src="youtube.png" alt="YouTube" class="social-icon">
+                    <span>YouTube</span>
+                </a>
                 <a href="https://www.snapchat.com/add/riverkritzar" class="social-button">
                     <img src="snapchat-logo.svg" alt="Snapchat" class="social-icon">
                     <span>Snapchat</span>
