--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
         <div class="shoutouts-section section">
             <div id="tiktok-shoutouts">
                 <h2>TikTok Creator Shoutouts</h2>
-                <p id="lastUpdated"></p>
+                <p id="tiktok-last-updated-timestamp"></p>
             </div>
             <div class="creator-grid">
                 <!-- Cards will be dynamically generated here -->
             </div>
         </div>
-
+        
         <!-- Instagram Shoutouts Section -->
         <div class="shoutouts-section section">
             <div id="instagram-shoutouts">
