--- a/index.html
+++ b/index.html
@@ -605,6 +605,14 @@
         </div>
     </div>
     
+    <!DOCTYPE html>
+<html>
+<head>
+    <title>OS Version Detection</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.28/ua-parser.min.js"></script>
+    <script src="os-detection.js"></script>
+</head>
+<body>
     <!-- Version Panel Section -->
     <div class="version-info-container">
         <div class="version-info-section">
@@ -616,6 +624,8 @@
             <div class="countdown">5 minutes</div>
         </div>
     </div>
+</body>
+</html>
     
    <!-- The back to top button should be placed just before the notice-container div -->
     <button id="backToTop" class="back-to-top" aria-label="Back to top">↑</button>
