--- a/index.html
+++ b/index.html
@@ -653,6 +653,6 @@
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
     <script src="events.js"></script>
-    <script src="version.js"></script>
+    <script src="os-detection.js"></script>
 </body>
 </html>                
