--- a/index.html
+++ b/index.html
@@ -605,10 +605,9 @@
         </div>
     </div>
     
-    <!DOCTYPE html>
-<html>
+    <html>
 <head>
-    <title>OS Version Detection</title>
+    <title>Version Information</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.28/ua-parser.min.js"></script>
     <script src="os-detection.js"></script>
 </head>
