--- a/index.html
+++ b/index.html
@@ -607,17 +607,15 @@
     
     <!-- Version Panel Section -->
     <div class="version-info-container">
-        <title>Version Information</title>
         <div class="version-info-section">
             <div class="version-header">Version Information</div>
             <div class="version-number">v1.11.0</div>
             <div class="build-number">2025.1.27</div>
+            <div class="device-info">Loading...</div>
             <div class="update-time">2025-01-27 21:29:16</div>
             <div class="countdown">5 minutes</div>
         </div>
     </div>
-</body>
-</html>
     
    <!-- The back to top button should be placed just before the notice-container div -->
     <button id="backToTop" class="back-to-top" aria-label="Back to top">↑</button>
@@ -645,6 +643,6 @@
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
     <script src="events.js"></script>
-    <script src="os-detection.js"></script>
+    <script src="version.js"></script>
 </body>
 </html>                
