--- a/index.html
+++ b/index.html
@@ -161,47 +161,44 @@
         </div>
         
         <!-- Countdown Section -->
-        <div class="countdown-section">
-            <h2>Countdown to Bus Army Dude's Birthday</h2>
-            <div class="countdown-container">
-                <div class="countdown-block">
-                    <div id="countdown-days" class="flip-clock">
-                        <div class="flip-clock-inner">
-                            <div class="flip-clock-front">00</div>
-                            <div class="flip-clock-back">00</div>
-                        </div>
+                <div class="countdown-section">
+                <div id="countdown-years" class="flip-clock">
+                    <div class="flip-clock-inner">
+                        <div class="flip-clock-front">00</div>
+                        <div class="flip-clock-back">00</div>
                     </div>
-                    <div class="countdown-label">Days</div>
                 </div>
-                <div class="countdown-block">
-                    <div id="countdown-hours" class="flip-clock">
-                        <div class="flip-clock-inner">
-                            <div class="flip-clock-front">00</div>
-                            <div class="flip-clock-back">00</div>
-                        </div>
+                <div id="countdown-months" class="flip-clock">
+                    <div class="flip-clock-inner">
+                        <div class="flip-clock-front">00</div>
+                        <div class="flip-clock-back">00</div>
                     </div>
-                    <div class="countdown-label">Hours</div>
                 </div>
-                <div class="countdown-block">
-                    <div id="countdown-minutes" class="flip-clock">
-                        <div class="flip-clock-inner">
-                            <div class="flip-clock-front">00</div>
-                            <div class="flip-clock-back">00</div>
-                        </div>
+                <div id="countdown-days" class="flip-clock">
+                    <div class="flip-clock-inner">
+                        <div class="flip-clock-front">00</div>
+                        <div class="flip-clock-back">00</div>
                     </div>
-                    <div class="countdown-label">Minutes</div>
                 </div>
-                <div class="countdown-block">
-                    <div id="countdown-seconds" class="flip-clock">
-                        <div class="flip-clock-inner">
-                            <div class="flip-clock-front">00</div>
-                            <div class="flip-clock-back">00</div>
-                        </div>
+                <div id="countdown-hours" class="flip-clock">
+                    <div class="flip-clock-inner">
+                        <div class="flip-clock-front">00</div>
+                        <div class="flip-clock-back">00</div>
                     </div>
-                    <div class="countdown-label">Seconds</div>
+                </div>
+                <div id="countdown-minutes" class="flip-clock">
+                    <div class="flip-clock-inner">
+                        <div class="flip-clock-front">00</div>
+                        <div class="flip-clock-back">00</div>
+                    </div>
+                </div>
+                <div id="countdown-seconds" class="flip-clock">
+                    <div class="flip-clock-inner">
+                        <div class="flip-clock-front">00</div>
+                        <div class="flip-clock-back">00</div>
+                    </div>
                 </div>
             </div>
-        </div>
 
 <!-- Calendar Section -->
 <section class="section" data-section-id="events">
