--- a/index.html
+++ b/index.html
@@ -160,42 +160,62 @@
             </div>
         </div>
         
-        <!-- Countdown Section -->
+       <!-- Countdown Section -->
     <div class="countdown-section">
-        <div id="countdown-years" class="flip-clock">
-            <div class="flip-clock-inner">
-                <div class="flip-clock-front">00</div>
-                <div class="flip-clock-back">00</div>
+        <div class="countdown-container">
+            <div class="countdown-block" id="countdown-years">
+                <div class="flip-clock">
+                    <div class="flip-clock-inner">
+                        <div class="flip-clock-front">00</div>
+                        <div class="flip-clock-back">00</div>
+                    </div>
+                </div>
+                <div class="countdown-label">Years</div>
             </div>
-        </div>
-        <div id="countdown-months" class="flip-clock">
-            <div class="flip-clock-inner">
-                <div class="flip-clock-front">00</div>
-                <div class="flip-clock-back">00</div>
+            <div class="countdown-block" id="countdown-months">
+                <div class="flip-clock">
+                    <div class="flip-clock-inner">
+                        <div class="flip-clock-front">00</div>
+                        <div class="flip-clock-back">00</div>
+                    </div>
+                </div>
+                <div class="countdown-label">Months</div>
             </div>
-        </div>
-        <div id="countdown-days" class="flip-clock">
-            <div class="flip-clock-inner">
-                <div class="flip-clock-front">00</div>
-                <div class="flip-clock-back">00</div>
+            <div class="countdown-block" id="countdown-days">
+                <div class="flip-clock">
+                    <div class="flip-clock-inner">
+                        <div class="flip-clock-front">00</div>
+                        <div class="flip-clock-back">00</div>
+                    </div>
+                </div>
+                <div class="countdown-label">Days</div>
             </div>
-        </div>
-        <div id="countdown-hours" class="flip-clock">
-            <div class="flip-clock-inner">
-                <div class="flip-clock-front">00</div>
-                <div class="flip-clock-back">00</div>
+            <div class="countdown-block" id="countdown-hours">
+                <div class="flip-clock">
+                    <div class="flip-clock-inner">
+                        <div class="flip-clock-front">00</div>
+                        <div class="flip-clock-back">00</div>
+                    </div>
+                </div>
+                <div class="countdown-label">Hours</div>
             </div>
-        </div>
-        <div id="countdown-minutes" class="flip-clock">
-            <div class="flip-clock-inner">
-                <div class="flip-clock-front">00</div>
-                <div class="flip-clock-back">00</div>
+            <div class="countdown-block" id="countdown-minutes">
+                <div class="flip-clock">
+                    <div class="flip-clock-inner">
+                        <div class="flip-clock-front">00</div>
+                        <div class="flip-clock-back">00</div>
+                    </div>
+                </div>
+                <div class="countdown-label">Minutes</div>
             </div>
-        </div>
-        <div id="countdown-seconds" class="flip-clock">
-            <div class="flip-clock-inner">
-                <div class="flip-clock-front">00</div>
-                <div class="flip-clock-back">00</div>
+            <div class="countdown-block" id="countdown-seconds">
+                <div class="flip-clock">
+                    <div class="flip-clock-inner">
+                        <div class="flip-clock-front">00</div>
+                        <div class="flip-clock-back">00</div>
+                    </div>
+                </div>
+                <div class="countdown-label">Seconds</div>
             </div>
         </div>
     </div>
