--- a/index.html
+++ b/index.html
@@ -160,66 +160,49 @@
             </div>
         </div>
         
-         <!-- Countdown Section -->
-    <div class="countdown-section">
-        <div class="countdown-container">
-            <div class="countdown-block" id="countdown-years">
-                <div class="flip-clock">
-                    <div class="flip-clock-inner">
-                        <div class="flip-clock-front">00</div>
-                        <div class="flip-clock-back">00</div>
+        <!-- Countdown Section -->
+        <div class="countdown-section">
+            <h2>Countdown to AFO Braces</h2>
+            <div class="countdown-container">
+                <div class="countdown-block">
+                    <div id="countdown-days" class="flip-clock">
+                        <div class="flip-clock-inner">
+                            <div class="flip-clock-front">00</div>
+                            <div class="flip-clock-back">00</div>
+                        </div>
                     </div>
+                    <div class="countdown-label">Days</div>
                 </div>
-                <div class="countdown-label">Years</div>
-            </div>
-            <div class="countdown-block" id="countdown-months">
-                <div class="flip-clock">
-                    <div class="flip-clock-inner">
-                        <div class="flip-clock-front">00</div>
-                        <div class="flip-clock-back">00</div>
+                <div class="countdown-block">
+                    <div id="countdown-hours" class="flip-clock">
+                        <div class="flip-clock-inner">
+                            <div class="flip-clock-front">00</div>
+                            <div class="flip-clock-back">00</div>
+                        </div>
                     </div>
+                    <div class="countdown-label">Hours</div>
                 </div>
-                <div class="countdown-label">Months</div>
-            </div>
-            <div class="countdown-block" id="countdown-days">
-                <div class="flip-clock">
-                    <div class="flip-clock-inner">
-                        <div class="flip-clock-front">00</div>
-                        <div class="flip-clock-back">00</div>
+                <div class="countdown-block">
+                    <div id="countdown-minutes" class="flip-clock">
+                        <div class="flip-clock-inner">
+                            <div class="flip-clock-front">00</div>
+                            <div class="flip-clock-back">00</div>
+                        </div>
                     </div>
+                    <div class="countdown-label">Minutes</div>
                 </div>
-                <div class="countdown-label">Days</div>
-            </div>
-            <div class="countdown-block" id="countdown-hours">
-                <div class="flip-clock">
-                    <div class="flip-clock-inner">
-                        <div class="flip-clock-front">00</div>
-                        <div class="flip-clock-back">00</div>
+                <div class="countdown-block">
+                    <div id="countdown-seconds" class="flip-clock">
+                        <div class="flip-clock-inner">
+                            <div class="flip-clock-front">00</div>
+                            <div class="flip-clock-back">00</div>
+                        </div>
                     </div>
+                    <div class="countdown-label">Seconds</div>
                 </div>
-                <div class="countdown-label">Hours</div>
-            </div>
-            <div class="countdown-block" id="countdown-minutes">
-                <div class="flip-clock">
-                    <div class="flip-clock-inner">
-                        <div class="flip-clock-front">00</div>
-                        <div class="flip-clock-back">00</div>
-                    </div>
-                </div>
-                <div class="countdown-label">Minutes</div>
-            </div>
-            <div class="countdown-block" id="countdown-seconds">
-                <div class="flip-clock">
-                    <div class="flip-clock-inner">
-                        <div class="flip-clock-front">00</div>
-                        <div class="flip-clock-back">00</div>
-                    </div>
-                </div>
-                <div class="countdown-label">Seconds</div>
             </div>
         </div>
-    </div>
-        
+
 <!-- Calendar Section -->
 <section class="section" data-section-id="events">
     <div class="section-content">
