--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         
         <!-- Countdown Section -->
         <div class="countdown-section">
-            <h2>Countdown to AFO Braces</h2>
+            <h2>Countdown to BUS ARMY DUDE'S 20TH BIRTHDAY</h2>
             <div class="countdown-container">
                 <div class="countdown-block">
                     <div id="countdown-days" class="flip-clock">
