--- a/settings.html
+++ b/settings.html
@@ -50,9 +50,9 @@
                             <p class="setting-description">Set a time range for Dark Mode</p>
                         </div>
                         <label for="darkModeStart">Start Time:</label>
-                        <input type="time" id="darkModeStart" class="time-input">
+                        <input type="time" id="darkModeStart" class="time-input" value="20:00">
                         <label for="darkModeEnd">End Time:</label>
-                        <input type="time" id="darkModeEnd" class="time-input">
+                        <input type="time" id="darkModeEnd" class="time-input" value="06:00">
                         <p id="darkModeScheduleStatus" class="status-text">Coming Soon...</p>
                     </div>
                 </div>
@@ -120,9 +120,9 @@
     </div>
 
     <!-- Footer -->
-<footer>
-    <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
-</footer>
+    <footer>
+        <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
+    </footer>
     
     <!-- Scripts -->
     <script src="settings.js"></script>
