--- a/index.html
+++ b/index.html
@@ -39,16 +39,20 @@
 </head>
 <body class="dark-mode">
     <div class="container">
-        <!-- Profile Section -->
-        <div class="profile-section section">
-            <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
-            <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
-            <div class="username-checkmark">
-                <h1>Bus Army Dude</h1>
-                <img src="check.png" alt="Verified" class="verified">
-            </div>
-            <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
-        </div>
+       <!-- Profile Section -->
+<div class="profile-section section">
+    <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
+    <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+    <div class="username-checkmark">
+        <h1>Bus Army Dude</h1>
+        <img src="check.png" alt="Verified" class="verified">
+    </div>
+    <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
+
+    <!-- Status Circle -->
+    <span id="profileStatus" class="status-circle"></span>
+</div>
+
         
         <!-- Social Links Section -->
         <div class="social-links-section">
