--- a/settings.html
+++ b/settings.html
@@ -60,34 +60,35 @@
                 </div>
 
                 <!-- Owner Only Settings Section -->
-                <div class="settings-subsection owner-only">
-                    <h2 class="subsection-title">Owner Only Settings</h2>
-                    
-                    <!-- Maintenance Mode -->
-                    <div class="setting-card">
-                        <div class="setting-label">
-                            <h3 class="setting-title">Maintenance Mode</h3>
-                            <p class="setting-description">Put the site into maintenance mode for updates</p>
-                        </div>
-                        <label class="toggle-switch">
-                            <input type="checkbox" id="maintenanceModeToggle" disabled>
-                            <span class="toggle-slider"></span>
-                        </label>
-                    </div>
+<div class="settings-subsection owner-only">
+    <h2 class="subsection-title">Owner Only Settings</h2>
+    
+    <!-- Maintenance Mode -->
+    <div class="setting-card">
+        <div class="setting-label">
+            <h3 class="setting-title">Maintenance Mode</h3>
+            <p class="setting-description">Put the site into maintenance mode for updates</p>
+        </div>
+        <label class="toggle-switch">
+            <input type="checkbox" id="maintenanceModeToggle" disabled>
+            <span class="toggle-slider"></span>
+        </label>
+    </div>
 
-                    <!-- Profile Status -->
-                    <div class="setting-card">
-                        <div class="setting-label">
-                            <h3 class="setting-title">Profile Status</h3>
-                            <p class="setting-description">Set profile status (active, under review, etc.)</p>
-                        </div>
-                        <select id="profileStatusSelect" class="select-input" disabled>
-                            <option value="active">Active</option>
-                            <option value="under_review">Under Review</option>
-                            <option value="inactive">Inactive</option>
-                        </select>
-                    </div>
-                </div>
+    <!-- Profile Status -->
+    <div class="setting-card">
+        <div class="setting-label">
+            <h3 class="setting-title">Profile Status</h3>
+            <p class="setting-description">Set profile status (Online, Idle, Do Not Disturb, Offline)</p>
+        </div>
+        <select id="profileStatusSelect" class="select-input" disabled>
+            <option value="online">🟢 Online</option>
+            <option value="idle">🟡 Idle</option>
+            <option value="do_not_disturb">🔴 Do Not Disturb</option>
+            <option value="offline">🔘 Offline</option>
+        </select>
+    </div>
+</div>
 
                 <!-- Danger Zone Section -->
                 <div class="settings-subsection danger-zone">
