--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
     <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
     <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
     
+    <!-- Profile Section -->
+<div class="profile-section">
+    <div class="profile-pic-wrapper">
+        <img src="profile-pic.jpg" alt="Profile Picture" class="profile-pic">
+        
         <!-- Profile Status Circle (half in, half out) -->
         <div class="profile-status-container">
             <span class="profile-status">🟢</span> <!-- Default status (can be updated dynamically) -->
