--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Profile Section -->
 <div class="profile-section">
     <div class="profile-pic-wrapper">
-        <img src="profile-pic.jpg" alt="Profile Picture" class="profile-pic">
+        <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
         
         <!-- Profile Status Circle (half in, half out) -->
         <div class="profile-status-container">
