--- a/settings.html
+++ b/settings.html
@@ -79,12 +79,11 @@
                     <div class="setting-card">
                         <div class="setting-label">
                             <h3 class="setting-title">Profile Status</h3>
-                            <p class="setting-description">Set profile status (Online, Idle, Do Not Disturb, Offline)</p>
+                            <p class="setting-description">Set profile status (Online, Idle, Offline)</p>
                         </div>
                         <select id="profileStatusSelect" class="select-input" disabled>
                             <option value="online">🟢 Online</option>
                             <option value="idle">🟡 Idle</option>
-                            <option value="do_not_disturb">🔴 Do Not Disturb</option>
                             <option value="offline">🔘 Offline</option>
                         </select>
                     </div>
