--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     <!-- Profile Section -->
 <div class="profile-section">
     <div class="profile-pic-wrapper">
-      <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
+        <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
         <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
         
         <!-- Profile Status Circle (half in, half out) -->
         <div class="profile-status-container">
-            <span class="profile-status">🟢</span> <!-- Default status (can be updated dynamically) -->
+            <span class="profile-status online">🟢</span> <!-- Default status (can be updated dynamically) -->
         </div>
     </div>
 
