--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
         <!-- Profile Status Circle (half in, half out) -->
         <div class="profile-status-container">
-            <span class="profile-status online">🟢</span> <!-- Default status (can be updated dynamically) -->
+            <span class="profile-status">🟢</span> <!-- This status will update dynamically -->
         </div>
     </div>
 
@@ -58,6 +58,7 @@
     </div>
     <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
 </div>
+
         
         <!-- Social Links Section -->
         <div class="social-links-section">
